unittest_files = files(
'app/ndncert.t.cpp','app/ping.t.cpp','app/rdr.t.cpp','app/segment.t.cpp','core/region.t.cpp','core/simple-queue.t.cpp','face/face.t.cpp','face/transport.t.cpp','keychain/certificate.t.cpp','keychain/digest.t.cpp','keychain/ec.t.cpp','keychain/hmac.t.cpp','keychain/validity-period.t.cpp','packet/component.t.cpp','packet/convention.t.cpp','packet/data.t.cpp','packet/interest.t.cpp','packet/nack.t.cpp','packet/name.t.cpp','store/kv.t.cpp','tlv/decoder.t.cpp','tlv/encoder.t.cpp','tlv/ev-decoder.t.cpp','tlv/nni.t.cpp','tlv/varnum.t.cpp'
)
